--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "maehem",
   "description": "Pronounced \"Mayhem\"",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.mjs",
   "devDependencies": {
     "@open-wc/dev-server-hmr": "^0.1.2-next.0",
     "@web/dev-server": "^0.1.29"
   },
+  "bin": {
+    "maehem": "./index.mjs"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
