--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "maehem",
   "description": "Pronounced \"Mayhem\"",
   "version": "0.0.6",
-  "main": "index.mjs",
+  "main": "index.js",
   "dependencies": {
     "@open-wc/dev-server-hmr": "^0.1.2-next.0",
     "@web/dev-server": "^0.1.29"
   },
   "bin": {
-    "maehem": "./index.mjs"
+    "maehem": "./commands.mjs"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
